# Vector-64

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  EVAL_FIX.md  README.md  main.cpp  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: main.cpp
architecture/: engine-core.md
docs/: architecture.md  nnue-training.md  vector64-spec.md
src/cores/: attacks.cpp  attacks.h  bitboard.h  invariants.h  move.h  movegen.cpp  movegen.h  position.cpp  position.h  types.h  zobrist.cpp  zobrist.h
src/nnue/: halfka.h  network.cpp  network.h  nnue.cpp  nnue.h  nnue_adapter.cpp  nnue_adapter.h
src/search/: evaluator.cpp  evaluator.h  move_ordering.cpp  move_ordering.h  search.cpp  search.h  syzygy.cpp  syzygy.h  transposition_table.cpp  transposition_table.h
src/syzygy/: README.md
src/uci/: uci.cpp  uci.h
src/utils/: debug.cpp  debug.h
test_data/: standard.epd
tests/: nnue_consistency.cpp  nnue_consistency.h  perfts.cpp  perfts.h  test_zobrist.cpp  uci_smoke.py
tests/cpp/: perfts.cpp  perfts.h  test_zobrist.cpp
tests/python/: test_feature_encoding.py  test_uci_behavior.py  uci_smoke.py
tools/: bench.sh  bench_arm.sh  bench_pgo.sh  bench_signature.sh  bench_signature.txt  check_gpu.py  lib_bench.sh  run_pipeline.py  run_training.ps1  smoke_test.py  sprt_conthist.ps1  sprt_final.ps1  sprt_lazydual.ps1  sprt_pending.ps1  train_nnue.py  update_bench_signature.sh
tools/nnue/: build_halfkp_npz.py  build_stk_data.py  check_vector64.py  datagen.py  export_vector64.py  halfka_features.py  make_net.py  match.py  rl_loop.py  rl_train_vector64.py  train_stk.py  train_vector64.py
